2008-03-05  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonmount.c:
        (g_daemon_mount_eject_finish):
	Initialize drive variable not access
	undefined memory (#520388)

2008-03-04  A. Walton  <awalton@svn.gnome.org>

	* daemon/ParseFTPList.c (ParseFTPList):
	Trivial C89 patch, fixes #520339. 
	Patch from Jens Granseuer.

2008-03-04  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_mount):
	set the right GError here. Makes gvfsd-ftp run fine manually again.

2008-03-04  Benjamin Otte  <otte@gnome.org>

	* common/gmountspec.c: (g_mount_spec_set_with_len):
	add g_return_if_fail here - I had SEGVs sometime later due to values
	being NULL here. So better catch em early

2008-03-04  Sebastien Bacher  <seb128@ubuntu.com>

	* configure.ac: New version update
		
=== gvfs 0.1.11 ===

2008-03-04  Sebastien Bacher  <seb128@ubuntu.com>

	* NEWS: Update for 0.1.11

2008-03-04  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalvolumemonitor.c:
        (g_hal_volume_monitor_finalize):
	Free mounts with g_unix_mount_free, not g_object_unref.

2008-03-04  Alexander Larsson  <alexl@redhat.com>

        * client/gvfsfusedaemon.c:
        (debug_print):
	Actually disable debug log by default

2008-03-04  Alexander Larsson  <alexl@redhat.com>

	* configure.ac: 
	Post release version bump
	
=== gvfs 0.1.10 ===
	
2008-03-04  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2008-03-04  Alexander Larsson  <alexl@redhat.com>

	* client/gdaemonvfs.c (_g_daemon_vfs_get_mount_info_async):
	Bump timeout to standard gvfs time.
	Patch from Matthias Clasen

2008-03-04  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalvolumemonitor.c:
        (update_all):
	Actually emit changes for volumes and mounts too

2008-03-04  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.1.9 ===
	
2008-03-04  Alexander Larsson  <alexl@redhat.com>

	* daemon/Makefile.am (gvfsd_ftp_SOURCES):